<resources>
    <string name="app_name">uNewsApp</string>
    <string name="russia">Россия</string>
    <string name="art">Искусство</string>
    <string name="sport">Спорт</string>
    <string name="science">Наука</string>
    <string name="economics">Экономика</string>
    <string name="currency_course">Курс валют</string>
    <string name="stocks_indices">Индексы акций</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="converter">Конвертер валют</string>
    <string name="stock">Индекс акций</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unewsapp">uNewsApp</string>
    <string name="news_for_the_day">За последний день</string>
    <string name="news_for_the_week">За последнюю неделю</string>
    <string name="news_for_the_month">За последний месяц</string>
    <string name="none">Без ограничений</string>
    <string name="business">Бизнесс</string>
    <string name="corona">Коронавирус</string>
    <string name="politics">Политика</string>
    <string name="health">Здоровье</string>
    <string name="countries">Страны</string>
    <string name="latest">Последнее</string>
    <string name="world">Мир</string>
    <string name="all">Все</string>
    <string name="fragment_search_label">Поиск</string>
    <string name="time">Time</string>
    <string name="tags">Tags</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
</resources>