<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/tagSelection"
        android:checkableBehavior="single">

        <item
            android:id="@+id/all"
            android:checkable="true"
            android:title="@string/all" />

        <item
            android:id="@+id/latest"
            android:checkable="true"
            android:title="@string/latest" />

        <item
            android:id="@+id/corona"
            android:checkable="true"
            android:title="@string/corona" />
        <item
            android:id="@+id/politics"
            android:checkable="true"
            android:title="@string/politics" />

        <item
            android:id="@+id/business"
            android:checkable="true"
            android:title="@string/business" />

        <item
            android:id="@+id/russia"
            android:checkable="true"
            android:title="@string/russia" />
        <item
            android:id="@+id/world"
            android:checkable="true"
            android:title="@string/world" />
    </group>


</menu>
